@@ -24,6 +24,9 @@
       update documentation for the uploadInfo to show that ->Vars should not be
       used to get the filename for this method
 
+    [ DOCUMENTATION ]
+    - tweak perldoc for -utf8 option (RT #54341, thanks to Helmut Richter)
+
 4.03 2014-07-02
 
     [ REMOVED / DEPRECATIONS ]
